# omniclaw

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  OmniClaw_Nanopayments_PRD.docx  README.md  ROADMAP.md  SECURITY.md  build.sh  coverage.json  docker-compose.agent.yml  docker-compose.yml  pyproject.toml
docs/: API_REFERENCE.md  CCTP_USAGE.md  CLI_REFERENCE.md  FEATURES.md  GATEWAY_MIDDLEWARE.md  GUARDS_GUIDE.md  NANOPAYMENTS_QA_REVIEW.md  OMNICLAW.md  OMNICLAW_NANOPAYMENTS_IMPLEMENTATION_PLAN.md  PRODUCTION_HARDENING.md  README.md  SDK_USAGE_GUIDE.md  TRUST_GATE.md  WALKTHROUGH_BUYER.md  WALKTHROUGH_SCENARIOS.md  WALKTHROUGH_SELLER.md  agent-getting-started.md  agent-skills.md  compliance-architecture.md  erc_804_spec.md
examples/: agent_to_agent_gateway_batched_demo.py  live_dashboard_simulation.py  mock_webhook_server.py  payment_canary.py  policy-advanced.json  test_wallet_features.py
mcp_server/: CLOUD_RUN_DEPLOYMENT.md  Dockerfile  LICENSE  README.md  RELEASE.md  SETUP_AUTH.md  TESTING.md  TOOLS.md  TROUBLESHOOTING.md  cloudbuild.yaml  deploy-first-time.sh  deploy.sh  pyproject.toml  requirements.txt  start.py  start.sh
mcp_server/app/core/: config.py  lifecycle.py  security.py
mcp_server/app/mcp/: fastmcp_server.py
mcp_server/app/payments/: guards.py  interfaces.py  omniclaw_client.py  service.py
mcp_server/app/webhooks/: circle.py
mcp_server/tests/: conftest.py  test_payment_client.py  test_tools.py
scripts/: corrected_walkthrough.py  demo_complete_flow.py  demo_complete_x402_flow.py  demo_x402_client.py  demo_x402_complete_flow.py  (+21 more)
(+130 files in other folders)
